# Assembly-Language-Interpretor

./: ADD.cpp  ADD.h  ALI.cpp  ALI.h  CMakeLists.txt  DEC.cpp  DEC.h  HLT.cpp  HLT.h  INT.cpp  INT.h  JMP.cpp  JMP.h  JVS.cpp  JVS.h  JZS.cpp  JZS.h  LDA.cpp  LDA.h  LDB.cpp  LDB.h  LDI.cpp  LDI.h  README.md  SAL.cpp  SAL.h  STR.cpp  STR.h  XCH.cpp  XCH.h  input.txt  main.cpp
