cmake_minimum_required(VERSION 3.17)
project(untitled1)

set(CMAKE_CXX_STANDARD 11)

add_executable(untitled1 main.cpp SAL.cpp SAL.h DEC.cpp DEC.h ALI.cpp ALI.h LDA.cpp LDA.h LDB.cpp LDB.h LDI.cpp LDI.h STR.cpp STR.h INT.cpp INT.h XCH.cpp XCH.h JMP.cpp JMP.h JZS.cpp JZS.h JVS.cpp JVS.h ADD.cpp ADD.h HLT.cpp HLT.h)